# bakatoo

./: .dockerignore  .gitignore  .slugignore  Aptfile  Dockerfile  README.md  api_test.py  audio_segmentation.py  audio_structure.py  form_finder.py  logic.py  main.py  processor.py  pyproject.toml  requirements.txt  shazam_requests.py  task.py  theme_finder.py  todo.md  web.py
paramviz_app/: requirements.txt  viz.py
segmtest/: util.py  viz.py
static/: index.html  script.js  style.css
