[build-system]
requires = ["setuptools", "numpy~=1.21.5", "scipy~=1.8.0", "Cython>=0.29.22"]
build-backend = "setuptools.build_meta"

[project]
name = "Muusikateose vormianalüüs"
dependencies = [
    "Flask==2.0.3",
    "Werkzeug>=2.0",
    "librosa==0.9.1",
    "gunicorn==20.0.4",
    "pychorus~=0.1",
    "SoundFile~=0.10.3.post1",
    "madmom"
]